--- a/views/balance.ejs
+++ b/views/balance.ejs
@@ -17,14 +17,11 @@
         crossorigin="anonymous"></script>
 
     <script type="text/javascript">
-
-        $(document).ready(function () {
-            $("#btnRefresh").click(function () {
-                location.reload(true);
-            });
-        });
-
+        function reloadPage() {
+            location.reload(true);
+        }
     </script>
+
 </head>
 
 <body class="container">
@@ -56,10 +53,10 @@
                             <td class="h2 font-weight-light text-center">
                                 <%= trade.Currency %>
                             </td>
-                            <td class="h2 font-weight-light text-right">
+                            <td class="h2 font-weight-light text-right" style=" font-weight: 200; font-size: 40px; ">
                                 <%= trade.Available %>
                             </td>
-                            <td class="h2 font-weight-light text-right">
+                            <td class="h2 font-weight-light text-right" style=" font-weight: 200; font-size: 40px; ">
                                 <%= trade.Base %>
                             </td>
                         </tr>
@@ -74,20 +71,20 @@
 
 
     <div class="row text-center">
-        <h3> Total
+        <h3 style=" font-weight: 200; font-size: 40px; "> Total
         </h3>
     </div>
     <div class="row text-center">
-        <h1>
+        <h1 style=" font-size: 60px; ">
             <%= Total %>
         </h1>
-        <h2>
+        <h2 style=" font-weight: 400; font-size: 35px; ">
             <%= Base %>
         </h2>
     </div>
     <h1></h1>
     <div class="row text-center">
-        <button type="button" class="btn btn-primary btn-lg btn-block" id="btnRefresh">
+        <button type="button" class="btn btn-primary btn-lg btn-block" onclick="reloadPage();" style=" height: 100px; font-size: 40px; margin-top: 60px; ">
             REFRESH</button>
     </div>
 </body>
